How you compare css updates

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -95,9 +95,35 @@
         text-align: left;
     }
     div.how_you_compare_section {
-        background-color: #EDECEF;
-        /*border-radius: 15px; */
+        background-color: #f1f1f1;
+        color: #747678;
+        border-radius: 15px;
         padding: 10px;
+        padding-left: 20px;
+        border-style: solid;
+        border-width: thin;
+        border-color: #006a96;
+        width: 70%;
+    }
+    div.how_you_compare_section h3 {
+      color: #006a96;
+      font-weight: lighter;
+      font-family: Mulish,sans-serif;
+      font-size: 36px;
+    }
+    div.how_you_compare_section h4 {
+      color: #006a96;
+      font-weight: lighter;
+      font-family: Mulish,sans-serif;
+      font-size: 20px;
+    }
+    div.how_you_compare_section p {
+      font: normal normal 400 14px/1.6 Muli,sans-serif;
+      font-variant-numeric: oldstyle-nums;
+      color: #747678;
+    }
+    div.how_you_compare_section a {
+      color: #006a96;
     }
     div.your_sample_diversity_inset {
       background-color: #006a96;
