--- a/microsetta_interface/templates/account_overview.jinja2
+++ b/microsetta_interface/templates/account_overview.jinja2
@@ -113,9 +113,9 @@
                 <img src="/static/img/source_human.png" class="card-img-top card-img mx-auto my-3" alt="..."/>
                 <div class="card-title center-text">Human Source</div>
                 <div class="card-body">
-                    Collect sample(s) from <b>yourself</b> (e.g. fecal, saliva, skin prick, etc.)
+                    Collect sample(s) from <b>yourself</b> (e.g. fecal, saliva, skin, etc.)
                     <br/>
-                    Collect sample(s) from <b>someone else</b> (fecal, saliva, skin, prick, etc.)
+                    Collect sample(s) from <b>someone else</b> (fecal, saliva, skin, etc.)
                 </div>
                 <div class="card-footer d-flex justify-content-center">
                     <a class="btn btn-primary btn-lg" href="/accounts/{{ account.account_id }}/create_human_source" role="button">Select</a>
