--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -149,6 +149,7 @@
     }
 
     .scatter-bg {
+      background-image: url('/static/img/scatter.png');
       background: url('/static/img/scatter.png');
       background-position: top 400px left 0px;
       background-size: 220px;
