Moved static images with text to new en_us folder.  Translations will go into es_mx.  Updated links to be replaced by babel in jinja2

--- a/microsetta_interface/templates/faq.jinja2
+++ b/microsetta_interface/templates/faq.jinja2
@@ -76,12 +76,12 @@
                     Sign Up
                 </a> to create a login using your email and a password of your choice.
                 <br>
-                <img src="/static/img/signup_example.png" class="resize75"/>
+                <img src="/static/img/{{ _("en_us") }}/signup_example.png" class="resize75"/>
                 <br>
                 After, you will be prompted to click on the “Create New Account” button to fill out your personal
                 information and kit ID.  Please use the kit ID provided on your registration card found in your kit.
                 <br>
-                <img src="/static/img/create_account_example.png" class="resize75"/>
+                <img src="/static/img/{{ _("en_us") }}/create_account_example.png" class="resize75"/>
                 <br>
                 <b><u>For existing participants:</b></u>
                 <br>
@@ -220,7 +220,7 @@
                 <br>
                 The kit ID is located on the kit registration card, found in the slot for Step 2 in your kit (please see the image below):
                 <br>
-                <img src="/static/img/old_registration_password.jpg" class="resize"/>
+                <img src="/static/img/{{ _("en_us") }}/old_registration_password.jpg" class="resize"/>
                 <br>
                 <i>IMPORTANT:</i> If your registration card contains a "Password", as displayed in the image above, please the associated password. This is for our old website that is no longer online.
                 <br>
@@ -252,7 +252,7 @@
                         </li>
                     <li>Once you have completed Step 2, click on your name in the source list (example below).</li>
                     <br>
-                    <img src="/static/img/choose_source_example.png" class="resize75"/>
+                    <img src="/static/img/{{ _("en_us") }}/choose_source_example.png" class="resize75"/>
                     <br>
                     <li>Next, you will need to add in your kit ID (“To add your
                     samples, please enter a kit ID here:”).  The kit ID can be
@@ -264,7 +264,7 @@
                     collection date and the sample type, click on the barcode
                     number (colored as blue text).</li>
                     <br>
-                    <img src="/static/img/choose_sample_example.png" class="resize75"/>
+                    <img src="/static/img/{{ _("en_us") }}/choose_sample_example.png" class="resize75"/>
                 </ol>
                 <br>
                 <u>Questions on Sample Collection</u>
