--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1372,7 +1372,7 @@
           <div class="tab-pane fade show active" id="compare" role="tabpanel" aria-labelledby="compare-tab">
             <div class="column results_text">
                 <h3>How do you compare?</h3>
-                <img class="diversity-banner" src='/static/img/hero-home-4-xl.jpeg'>
+                <img class="diversity-banner" src='/static/img/{{ _("en_us") }}/hero-home-4-xl.jpeg'>
                 <br/>
                 <p>
                     Your microbiome is a rainforest of diverse microbes dominated
