--- a/microsetta_interface/templates/home.jinja2
+++ b/microsetta_interface/templates/home.jinja2
@@ -19,16 +19,16 @@
 {% block content %}
     <div class="row">
       <div class="col-12 col-lg-8 text-center how_it_works">
-          <img src="/static/img/how-it-works.svg" class="img-fluid" />
+          <img src="/static/img/{{ _("en_us") }}/how-it-works.svg" class="img-fluid" />
       </div>
       <div class="col-12 col-lg-4 text-center" style="background: white;">
           <div class="row h-25"></div>
           <div class="row h-50">
               <div class="col d-flex flex-column">
                       <div class="flex-fill">
-                          <img src="/static/img/the-microsetta-initiative-logo-rgb-1.png"
-                               srcset="/static/img/the-microsetta-initiative-logo-rgb-1@2x.png 2x,
-                               /static/img/the-microsetta-initiative-logo-rgb-1@3x.png 3x" />
+                          <img src="/static/img/{{ _("en_us") }}/the-microsetta-initiative-logo-rgb-1.png"
+                               srcset="/static/img/{{ _("en_us") }}/the-microsetta-initiative-logo-rgb-1@2x.png 2x,
+                               /static/img/{{ _("en_us") }}/the-microsetta-initiative-logo-rgb-1@3x.png 3x" />
                       </div>
                       <div class="flex-fill">
                           <h1>Welcome!</h1>
